--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -866,6 +866,104 @@ body{
 /* team */
 
 /* testimonials */
+.section-testimonials{
+    background-color: #f3f3f3;
+    padding-top: 80px;
+    padding-bottom: 100px;
+}
+    .section-inner-testimonials{
+        display: flex;
+        flex-direction: column;
+        /* align-items: center; */
+        text-align: center;
+    }
+        .section-inner-testimonials-wrapper{
+            margin-left: auto;
+            margin-right: auto;
+        }
+            .section-inner-testimonials-wrapper_title{
+                font-family: 'Source Sans Pro', sans-serif;
+                font-size: 20px;
+                font-weight: 200;
+                letter-spacing: 0.1em;
+                text-transform: uppercase;
+            }
+            .section-inner-testimonials-wrapper_subtitle{
+                font-family: 'Open Sans', sans-serif;
+                font-size: 14px;
+                max-width: 465px;
+                margin-top: 40px;
+                margin-bottom: 60px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .section-inner-testimonials-wrapper_content{
+                background-color: #ffffff;
+                max-width: 1170px;
+                padding-top: 60px;
+                padding-bottom: 50px;
+                display: flex;
+                flex-direction: column;
+            }
+                .section-inner-testimonials-wrapper_content-wrap{
+                    display: flex;
+                    flex-direction: row;
+                    margin-left: 140px;
+                    margin-right: 100px;
+                    
+                    
+                }
+                    .section-inner-testimonials-wrapper_content-photo{}
+                    .section-inner-testimonials-wrapper_content-text{
+                        max-width: 735px;
+                        display: flex;
+                        flex-direction: column;
+                        text-align: left;
+                        padding-left: 100px;
+                    }
+                        .section-inner-testimonials-wrapper_content-say{
+                            font-family: 'Myriad Pro';
+                            font-size: 16px;
+                            
+                        }
+                        .section-inner-testimonials-wrapper_content-name{
+                            margin-top: 30px;
+                            font-family: 'Open Sans', sans-serif;
+                            font-size: 16px;
+                            font-weight: bold;
+                            color: #19bd9a;
+                        }
+                        .section-inner-testimonials-wrapper_content-position{
+                            margin-top: 10px;
+                            font-family: 'Myriad Pro';
+                            font-size: 14px;
+                        }
+                    
+                .section-inner-testimonials-wrapper-slider{
+                    display: flex;
+                    flex-direction: row;
+                    width: 50px;
+                    justify-content: space-between;
+                    margin-top: 60px;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+                    .section-inner-testimonials-wrapper-slider-item{
+                        
+                        width: 8px;
+                        height: 8px;
+                        background-color: transparent;
+                        border: 1px solid rgb(25, 189, 154);
+                        
+                        border-radius: 50%;   
+                    }
+
+                    .section-inner-testimonials-wrapper-slider-itemgreen{
+                        width: 10px;
+                        height: 10px;
+                        background: rgb(25, 189, 154);
+                        border-radius: 50%;
+                    }
 
 /* testimonials */
 
